; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/storage/extr_shuttle_usbat.c_usbat_device_enable_cdt.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/storage/extr_shuttle_usbat.c_usbat_device_enable_cdt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.us_data = type { i32 }

@USBAT_UIO_ACKD = common dso_local global i32 0, align 4
@USBAT_UIO_OE1 = common dso_local global i32 0, align 4
@USBAT_UIO_OE0 = common dso_local global i32 0, align 4
@USBAT_UIO_EPAD = common dso_local global i32 0, align 4
@USBAT_UIO_1 = common dso_local global i32 0, align 4
@USB_STOR_XFER_GOOD = common dso_local global i32 0, align 4
@USB_STOR_TRANSPORT_ERROR = common dso_local global i32 0, align 4
@USB_STOR_TRANSPORT_GOOD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.us_data*)* @usbat_device_enable_cdt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @usbat_device_enable_cdt(%struct.us_data* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.us_data*, align 8
  %4 = alloca i32, align 4
  store %struct.us_data* %0, %struct.us_data** %3, align 8
  %5 = load %struct.us_data*, %struct.us_data** %3, align 8
  %6 = load i32, i32* @USBAT_UIO_ACKD, align 4
  %7 = load i32, i32* @USBAT_UIO_OE1, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @USBAT_UIO_OE0, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @USBAT_UIO_EPAD, align 4
  %12 = load i32, i32* @USBAT_UIO_1, align 4
  %13 = or i32 %11, %12
  %14 = call i32 @usbat_write_user_io(%struct.us_data* %5, i32 %10, i32 %13)
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* @USB_STOR_XFER_GOOD, align 4
  %17 = icmp ne i32 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %1
  %19 = load i32, i32* @USB_STOR_TRANSPORT_ERROR, align 4
  store i32 %19, i32* %2, align 4
  br label %22

20:                                               ; preds = %1
  %21 = load i32, i32* @USB_STOR_TRANSPORT_GOOD, align 4
  store i32 %21, i32* %2, align 4
  br label %22

22:                                               ; preds = %20, %18
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @usbat_write_user_io(%struct.us_data*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
